fix home img spacing

--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -61,7 +61,7 @@ img {
 }
 
 .images {
-  display: inline-flex;
+  display: flex;
   justify-content: space-around;
   align-content: space-around;
   margin-top: 20px;
